This file describes the changes to the Log for C++ library. See the CVS repository for more detailed descriptions.

2002-06-17 Aaron Ingram <ai8@yahoo.com>
	* Fixed default port for syslog in SimpleConfigurator.cpp
	* Added a sample configuration file: log4cpp.cfg 

2002-06-17 David Resnick <dresnick@mobilespear.com>
    * Merge of MS Threads & DLL Build support patch by Aaron Ingram <ai8@yahoo.com>
    with these changes:
    * src/main.cpp renamed to src/DllMain.cpp
    * Run-time library used for log4cppDLL changed to
    Multithreaded DLL (fixed need for #pragma warning(disable:4275))
    * pragma directives moved from various headers to 
    include/log4cpp/Portability.hh.
    * include/log4cpp/threading/MSThreads.hh: reset(): TlsSetValue
    uses parameter value instead of deleted one.
    
    * include/log4cpp/NTEventLogAppender.hh,
    src/NTEventLogAppender.cpp, msvc/NTEventLogAppender.mc,
    tests/testNTEventLog.cpp: added NTEventLogAppender.
    
    * msvc/testMain/testMain.dsp, msvc/testNTEventLog/testNTEventLog.dsp 
    added.
    
2002-06-03  Cedric Le Goater  <legoater@free.fr>
	* Makefile.am: added log4cpp.m4 installation
	* log4cpp.m4: added aclocal support
	* tests/Clock.cpp: fixed rdtscl() support on linux

2002-05-22 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* include/log4cpp/config-win32.h: fix compilation in Visual .NET.
	
2002-05-12 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* src/RollingFileAppender.cpp: explicitly remove oldest file in 
	rollOver() because win98 cannot rename() to existing files. 
	(Paulo Pizarro)

	* Makefile.am: convert *.bpg files to CRLF in dist.(Paulo Pizarro)
	
2002-04-21 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* include/log4cpp/config-win32.h: added mode_t typedef.

	* m4/AC_C_INT64_T.m4: added #define of HAVE_STDINT_H.
	* src/PatternLaout.cpp: #include <stdint.h> only if available.

2002-04-09 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>