@@ -11,12 +11,14 @@ int main(int argc, char** argv) {
     
     NDC::push("context2");
     std::cout << "3. push context2: " << NDC::get() << std::endl;
-    std::cout << "4. get depth: " << NDC::getDepth() << std::endl;
+    NDC::push("context3");
+    std::cout << "4. push context3: " << NDC::get() << std::endl;
+    std::cout << "5. get depth: " << NDC::getDepth() << std::endl;
 
-    std::cout << "5. pop: " << NDC::pop() << std::endl;
+    std::cout << "6. pop: " << NDC::pop() << std::endl;
 
     NDC::clear();
-    std::cout << "6. clear: " << NDC::get() << std::endl;
+    std::cout << "7. clear: " << NDC::get() << std::endl;
 
     return 0;
 }
